@@ -25,7 +25,7 @@ repository.url  = https://github.com/exodist/DBIx-QuickDB/
 repository.type = git
 
 [Prereqs]
-perl              = 5.008001
+perl              = 5.012000
 Test2             = 1.302120
 Test2::API        = 1.302120
 Test::More        = 1.302120
