@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Add ability to clone without cp or rsync
+    - Fix minimum perl version
+
 0.000011  2020-07-27 23:07:33-07:00 America/Los_Angeles
 
     - Add ability to clone databases
